# ai-tools-platform

./: .gitignore  Makefile
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 201d4664b8aa_add_title_to_job.py  4b3db475cb07_initial_schema.py  4f94ecba6b63_add_google_auth_and_credits.py  a1b2c3d4e5f6_update_tool_credit_prices.py  b2c3d4e5f6a7_seed_code_review_tool.py
backend/app/: celery_app.py  main.py
backend/app/agents/research/: graph.py  schemas.py  state.py
backend/app/agents/research/nodes/: critic.py  formatter.py  planner.py  search.py  synthesizer.py
backend/app/agents/research/prompts/: critic.py  planner.py  synthesizer.py
backend/app/api/v1/: auth.py  health.py  jobs.py  router.py  tools.py
backend/app/core/: config.py  constants.py  containers.py  database.py  deps.py  exceptions.py  security.py
backend/app/models/: __init__.py  job.py  tool.py  user.py
backend/app/repositories/: job.py  tool.py  user.py
backend/app/schemas/: auth.py  job.py  tool.py
backend/app/services/: job.py  tool.py
backend/app/tasks/: code_review.py  research.py
backend/app/tools/code_review/: prompt.py  schemas.py
backend/envs/: .gitignore
backend/scripts/: entrypoint.sh  seed.py
backend/tests/: conftest.py  test_tools.py
frontend/: Dockerfile.prod  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/lib/: auth.ts  constants.ts
infra/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
(+21 files in other folders)
